Add godep support
Signed-off-by: Xabier Larrakoetxea <slok69@gmail.com>

--- a/environment/dev/Dockerfile
+++ b/environment/dev/Dockerfile
@@ -16,6 +16,6 @@ RUN go get github.com/mailgun/godebug
 
 # Install project dependencies
 COPY . /tmp/monf
-#RUN cd /tmp/monf && godep restore
+RUN cd /tmp/monf && godep restore
 
 WORKDIR /go/src/github.com/slok/monf
