Fix travis build
Signed-off-by: Xabier Larrakoetxea <slok69@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ go:
   - tip
 env:
   - GOARCH=amd64
+
+install:
+  - go get github.com/tools/godep
+
 script:
+  - godep restore
   - go test ./...
 
 notifications:
