Add static assets implementiation with gulp and bower
Signed-off-by: Xabier Larrakoetxea <slok69@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ _testmain.go
 
 # Godep vendoring
 Godeps/_workspace
+
+# Node dependencies
+node_modules/
+
+# Static bower
+bower_components/
+dist/
